<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/w1"
    android:gravity="center_horizontal"
    android:paddingHorizontal="9dp"
    android:paddingVertical="9dp"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="75dp"
            android:layout_height="107dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_whatsapp"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/username"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/lightGrey"
            android:textColorHint="#257A1B"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/username"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/lightGrey"
            android:textColorHint="#257A1B"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/TextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/Password"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/lightGrey"
            android:textColorHint="#257A1B" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="Already Have An Account ?"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="193dp"
            android:layout_height="49dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_01"
            android:backgroundTint="#05985D"
            android:isScrollContainer="false"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="30dp">

            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/button_02"
                android:backgroundTint="#AEAEAE"
                android:drawableLeft="@drawable/ic_google"
                android:gravity="center|center_horizontal|center_vertical"
                android:padding="10dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="#020202"
                app:cornerRadius="10dp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btnFacebook"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_03"
                android:backgroundTint="#400DF4"
                android:drawableLeft="@drawable/ic_facebook"
                android:gravity="center_horizontal|center_vertical"
                android:padding="10dp"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="10dp"
                tools:ignore="DuplicateIds,RtlHardcoded" />
        </LinearLayout>

        <TextView
            android:id="@+id/PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sign_up_with_phone_number"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>